# schema/openapi/openapi.yaml
@@ -387,16 +387,12 @@ components:
       type: object
       required:
         - id
-        - company_id
         - lead_name
         - source
         - status
         - metadata
       properties:
         id:
-          type: string
-          format: uuid
-        company_id:
           type: string
           format: uuid
         lead_name:
@@ -485,15 +481,11 @@ components:
     CreateLeadRequest:
       type: object
       required:
-        - company_id
         - lead_name
         - source
         - status
         - metadata
       properties:
-        company_id:
-          type: string
-          format: uuid
         lead_name:
           type: string
           maxLength: 140
@@ -567,15 +559,11 @@ components:
     UpdateLeadRequest:
       type: object
       required:
-        - company_id
         - lead_name
         - source
         - status
         - metadata
       properties:
-        company_id:
-          type: string
-          format: uuid
         lead_name:
           type: string
           maxLength: 140
@@ -649,9 +637,6 @@ components:
     PatchLeadRequest:
       type: object
       properties:
-        company_id:
-          type: string
-          format: uuid
         lead_name:
           type: string
           maxLength: 140
